# NineDigits

./: .gitignore  Cargo.toml  README.md  algorithms.md
.cargo/: config.toml
data/: hardest26.in  hardest26.out  in1000x100  in1000x1000  in100x10000  in10x100000  in5x1000000  magic_1465.out
examples/: endgame_benchmark.rs  generate_sudokus.rs  solver_benchmark.rs
src/: array.rs  basic_solver.rs  bits.rs  board.rs  chacha.rs  codecup.rs  digit.rs  digit_box.rs  digit_set.rs  endgame.rs  error.rs  fast_solver.rs  lib.rs  log.rs  main.rs  memory.rs  midgame.rs  permutation.rs  platform.rs  player.rs  player_main.rs  queue.rs  random.rs  settings.rs  simd.rs  simd128.rs  simd256.rs  simd256_avx2.rs  simd256_emulated.rs  small.rs  small_set.rs  solution_table.rs  solver.rs  square_set.rs  symmetry.rs  transposition_table.rs
src/tests/: array.rs  board.rs  chacha.rs  digit.rs  digit_set.rs  mod.rs  random.rs  small.rs  square_set.rs
tests/: board.rs  chacha.rs  digit.rs  digit_box.rs  digit_set.rs  memory.rs  permutation.rs  queue.rs  random.rs  simd.rs  small.rs  solution_table.rs  square_set.rs  symmetry.rs  transposition_table.rs
tools/: Cargo.toml  build_submission.py  build_submission.sh  cargo_codecup.sh  games_schema.sql  run_benchmarks.sh  run_match.sh  scrape_games.py
