[package]
name = "sudoku-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 2
debug = true

[features]
default = ["tomeks_computer"]
tomeks_computer = []

[workspace]
members = ["tools"]